--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/CarringtonAllison/HerokuDeployment#readme",
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "ejs": "^3.1.6",
     "eslint": "^7.29.0",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^5.13.1"
+    "mongoose": "^5.13.1",
+    "react-bootstrap": "^1.6.1"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
